...
                    smallContent = {
                        WeatherCardSmall(
                            weatherModel = model,
                            preferences = weatherPreferences,
                            modifier = Modifier
                                .size(WidgetCardDimens.COMPACT_CARD_SIZE)
                                .testTag("weather_card_small")
                        )
                    },
                    wideContent = {
                        WeatherCard(
                            weatherModel = model,
                            preferences = weatherPreferences,
...
